Coming soon button changed

--- a/index.html
+++ b/index.html
@@ -72,18 +72,8 @@
                         <li>Never bother about ATM</li>
                         <li>Never become a warehouse for the dreaded coins</li>
                     </ul>
-                    <div class="download-area get_notified">
-                        <strong>Coming Soon.</strong> Very soon!
-
-                        <!--<ul class="btn-group list-inline">
-                            <li class="ios-btn"><a href="#">Download from the App Store</a></li>
-                            <li class="android-btn"><a href="#">Get it from Google Play</a></li>
-                        </ul>-->
-                        <!--<div class="note text-center">
-                            <p>30% OFF - Now only $0.99<br />Offer ends 31st March</p>
-                            <span class="left-arrow"></span>
-                            <span class="right-arrow"></span>
-                        </div>--><!--//note-->
+                    <div class="get_notified">
+                        <p><strong>Coming Soon.</strong> Very soon!</p>
                     </div>
                 </div><!--//overview-->
                 
